--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
             <nav class = "cabecalho-menu">
                 <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Criar Conta </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/calendario.html" target = "_blank" rel = "noopener"> Cronograma </a>
                 <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Saiba Mais </a>
-                <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Viagem </a>
             </nav>
         </header>
 
