Adicionando descrição para o login

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div class = "conteudo-login">
                     <div class = "login-imagem">
                         <img src = "img/logotipo.png" alt = "Logo da E-Chronos">
+                        <h4> Sejam bem-vindo (a) </h4>
                     </div>
 
                     <form class = "login-formulario">
