--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </div>
 
             <nav class = "cabecalho-menu">
-                <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Criar Conta </a>
-                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/calendario.html" target = "_blank" rel = "noopener"> Cronograma </a>
-                <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Saiba Mais </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/cadastro.html" target = "_blank" rel = "noopener"> Criar uma conta </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/calendario.html" target = "_blank" rel = "noopener"> Cronograma acadêmico </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/quem-somos.html" target = "_blank" rel = "noopener"> Quem somos </a>
             </nav>
         </header>
 
@@ -33,7 +33,7 @@
                 <div class = "conteudo-login">
                     <div class = "login-imagem">
                         <img src = "img/logotipo.png" alt = "Logo da E-Chronos">
-                        <h4> Sejam bem-vindo (a) </h4>
+                        <h3> Seja bem-vindo (a) </h3>
                     </div>
 
                     <form class = "login-formulario">
