--- a/calendario.html
+++ b/calendario.html
@@ -4,99 +4,56 @@
         <meta charset = "utf-8">
         <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title> E-Chronos - Calendário </title>
+        <title> E-Chronos | Calendário </title>
         <link rel = "icon" href = "img/favicon.ico">
-        <link rel = "stylesheet" href = "css/cronograma.css">
-        <script src = "js/cronograma.js" defer> </script>
+        <link rel = "stylesheet" href = "css/calendario.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+        <script src = "js/calendario.js" defer> </script>
     </head>
     <body>
         <header class = "cabecalho">
             <div class = "cabecalho-imagem">
                 <img src = "img/logotipo.png" alt = "Logo da E-Chronos">
-                <h1> E-Chronos </h1>
+                <h1 class = "nome-empresa"> E-Chronos </h1>
             </div>
+
+            <div class = "cabecalho-ham">
+                <ion-icon class = "abrir" name = "reorder-three-outline"> </ion-icon>
+                <ion-icon class = "fechar" name = "close-outline"> </ion-icon>
+            </div>
+
             <nav class = "cabecalho-menu">
-                <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Criar Conta </a>
-                <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Saiba Mais </a>
-                <a class = "menu-item" href = "#" target = "_blank" rel = "noopener"> Viagem </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/cadastro.html" target = "_blank" rel = "noopener"> Criar uma conta </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/quem-somos.html" target = "_blank" rel = "noopener"> Quem somos </a>
                 <ion-icon name = "person-circle-outline"> </ion-icon>
             </nav>
         </header>
 
         <main>
-            <section class = "conteudo">
-                <div class = "conteudo-calendario">
-                    <div class = "calendario-title">
-                        <h1> Calendário Acadêmico </h1>
-                    </div>
+            <div class = "calendario">
+                <div class = "calendario-cabecalho">
+                    <p class = "cabecalho-data"></p>
 
-                    <div class = "calendario-meses">
-                        <div>
-                            <p> Jan </p>
-                            <h3> 01 </h3>
-                        </div>
-
-                        <div>
-                            <p> Fev </p>
-                            <h3> 02 </h3>
-                        </div>
-
-                        <div>
-                            <p> Mar </p>
-                            <h3> 03 </h3>
-                        </div>
-
-                        <div>
-                            <p> Abr </p>
-                            <h3> 04 </h3>
-                        </div>
-
-                        <div>
-                            <p> Maio </p>
-                            <h3> 05 </h3>
-                        </div>
-
-                        <div>
-                            <p> Jun </p>
-                            <h3> 06 </h3>
-                        </div>
-
-                        <div>
-                            <p> Jul </p>
-                            <h3> 07 </h3>
-                        </div>
-
-                        <div>
-                            <p> Ago </p>
-                            <h3> 08 </h3>
-                        </div>
-
-                        <div>
-                            <p> Set </p>
-                            <h3> 09 </h3>
-                        </div>
-
-                        <div>
-                            <p> Out </p>
-                            <h3> 10 </h3>
-                        </div>
-
-                        <div>
-                            <p> Nov </p>
-                            <h3> 11 </h3>
-                        </div>
-
-                        <div>
-                            <p> Dez </p>
-                            <h3> 12 </h3>
-                        </div>
-                    </div>
-
-                    <div class = "calendario-descricao">
-                        <p> Clique no mês que deseja consultar a lista de exercícios </p>
+                    <div class = "cabecalho-icones">
+                        <span id = "prev" class = "material-symbols-rounded"> chevron_left </span>
+                        <span id = "next" class = "material-symbols-rounded"> chevron_right </span>
                     </div>
                 </div>
-            </section>
+
+                <div class = "calendario-conteudo">
+                    <ul class = "conteudo-semanas">
+                        <li> Dom </li>
+                        <li> Seg </li>
+                        <li> Ter </li>
+                        <li> Qua </li>
+                        <li> Qui </li>
+                        <li> Sex </li>
+                        <li> Sáb </li>
+                    </ul>
+
+                    <ul class = "conteudo-dias"></ul>
+                </div>
+            </div>
         </main>
 
         <script type = "module" src = "https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"> </script>
