--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </div>
 
             <nav class = "cabecalho-menu">
-                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/cadastro.html" target = "_blank" rel = "noopener"> Criar uma conta </a>
-                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/calendario.html" target = "_blank" rel = "noopener"> Cronograma acadêmico </a>
-                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/quem-somos.html" target = "_blank" rel = "noopener"> Quem somos </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/account.html" target = "_blank" rel = "noopener"> Criar uma conta </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/calendar.html" target = "_blank" rel = "noopener"> Entre em contato </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/about-us.html" target = "_blank" rel = "noopener"> Quem somos </a>
             </nav>
         </header>
 
@@ -43,8 +43,8 @@
                     </form>
 
                     <p class = "login-descricao">
-                        <a href = "#" target = "_blank" rel = "noopener"> Criar conta </a> |
-                        <a href = "#" target = "_blank" rel = "noopener"> Esqueceu sua senha? </a>
+                        <a href = "https://andrey-alm.github.io/e-chronos-ofc/account.html" target = "_blank" rel = "noopener"> Criar conta </a> |
+                        <a href = "https://andrey-alm.github.io/e-chronos-ofc/lost-pass.html" target = "_blank" rel = "noopener"> Esqueceu sua senha? </a>
                     </p>
                 </div>
             </section>
