--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <title> E-Chronos </title>
         <link rel = "icon" href = "img/favicon.ico">
         <link rel = "stylesheet" href = "css/index.css">
+        <link rel = "stylesheet" href = "css/responsive-menu.css">
         <script src = "js/index.js" defer> </script>
+        <script src = "js/responsive-menu.js" defer> </script>
     </head>
     <body onresize = "adequarMenu()">
         <header class = "cabecalho">
