--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel = "stylesheet" href = "css/responsive-menu.css">
         <script src = "js/index.js" defer> </script>
         <script src = "js/responsive-menu.js" defer> </script>
+        <script src = "js/auth-access.js" defer> </script>
     </head>
     <body onresize = "adequarMenu()">
         <header class = "cabecalho">
@@ -41,8 +42,10 @@
                     <form class = "login-formulario">
                         <input id = "username" type = "text" placeholder = "Digite seu nome de usuário..." autofocus required>
                         <input id = "password" type = "password" placeholder = "Digite sua senha..." required>
-                        <input id = "form-submit" type = "submit" value = "Entrar">
+                        <input id = "form_submit" type = "submit" value = "Entrar">
                     </form>
+
+                    <div class = "login-msg"> </div>
 
                     <p class = "login-descricao">
                         <a href = "https://andrey-alm.github.io/e-chronos-ofc/account.html" target = "_blank" rel = "noopener"> Criar conta </a> |
