--- a/account.html
+++ b/account.html
@@ -31,37 +31,46 @@
 
         <main>
             <section class = "conteudo">
-                <div class = "conteudo-acesso">
-                    <div class = "acesso-imagem">
-                        <img src = "img/logotipo.png" alt = "Logo da E-Chronos">
-                        <h3> Inscreva-se agora e planeje seu futuro </h3>
-                    </div>
+                <div class = "conteudo-imagem">
+                    <img src = "img/conta.svg" alt = "Perfil de uma conta">
+                </div>
 
-                    <form class = "acesso-formulario">
-                        <input id = "username" type = "text" placeholder = "Digite seu nome completo" autofocus required>
-                        <input id = "user-ra" type = "number" placeholder = "Digite seu nº de matrícula" required>
-
-                        <div class = "formulario-senha">
-                            <input id = "password" type = "password" placeholder = "Digite sua senha" required>
-                            <ion-icon class = "eye" id = "eye-on" name = "eye-outline"> </ion-icon>
-                            <ion-icon class = "eye" id = "eye-off" name = "eye-off-outline"> </ion-icon>
+                <div class = "conteudo-formulario">
+                    <form action = "#">
+                        <div class = "formulario-titulo">
+                            <h3> Inscreva-se agora e planeje seu futuro </h3>
                         </div>
 
-                        <div class = "formulario-senha">
-                            <input id = "password" type = "password" placeholder = "Confirme sua senha" required>
-                            <ion-icon class = "eye" id = "eye-on" name = "eye-outline"> </ion-icon>
-                            <ion-icon class = "eye" id = "eye-off" name = "eye-off-outline"> </ion-icon>
+                        <div class = "formulario-entrada">
+                            <div class = "entrada-box">
+                                <label for = "username"> Nome completo </label>
+                                <input id = "username" type = "text" placeholder = "Digite seu nome completo" autofocus required>
+                            </div>
+
+                            <div class = "entrada-box">
+                                <label for = "user-ra"> Número de matrícula </label>
+                                <input id = "user-ra" type = "text" placeholder = "Digite seu nº de matrícula" required>
+                            </div>
+
+                            <div class = "entrada-box">
+                                <label for = "password"> Senha </label>
+                                <input id = "password" type = "password" placeholder = "Digite sua senha" required>
+                                <ion-icon class = "eye" id = "eye-on" name = "eye-outline"> </ion-icon>
+                                <ion-icon class = "eye" id = "eye-off" name = "eye-off-outline"> </ion-icon>
+                            </div>
+
+                            <div class = "entrada-box">
+                                <label for = "confirm-password"> Confirme sua senha </label>
+                                <input id = "confirm-password" type = "password" placeholder = "Digite sua senha novamente" required>
+                                <ion-icon class = "eye on" id = "eye-on" name = "eye-outline"> </ion-icon>
+                                <ion-icon class = "eye off" id = "eye-off" name = "eye-off-outline"> </ion-icon>
+                            </div>
                         </div>
 
-                        <input id = "form_submit" type = "submit" value = "Cadastrar">
+                        <div class = "formulario-envio">
+                            <input id = "form_submit" type = "submit" value = "Cadastrar">
+                        </div>
                     </form>
-
-                    <div class = "acesso-msg"> </div>
-
-                    <p class = "acesso-descricao">
-                        Já tem um conta?
-                        <a href = "https://andrey-alm.github.io/e-chronos-ofc/index.html" target = "_blank" rel = "noopener"> Faça login </a>
-                    </p>
                 </div>
             </section>
         </main>
