--- a/calendar.html
+++ b/calendar.html
@@ -24,10 +24,9 @@
             </div>
 
             <nav class = "cabecalho-menu">
-                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/index.html" target = "_blank" rel = "noopener"> Fazer login </a>
-                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/account.html" target = "_blank" rel = "noopener"> Criar uma conta </a>
-                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/about-us.html" target = "_blank" rel = "noopener"> Quem somos </a>
-                <ion-icon name = "person-circle-outline"> </ion-icon>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/index.html"> Fazer login </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/account.html"> Criar uma conta </a>
+                <a class = "menu-item" href = "https://andrey-alm.github.io/e-chronos-ofc/about-us.html"> Quem somos </a>
             </nav>
         </header>
 
