--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     </div>
 
                     <form class = "login-formulario">
-                        <input id = "username" type = "text" placeholder = "Digite seu nome de usuário..." autofocus required>
-                        <input id = "password" type = "password" placeholder = "Digite sua senha..." required>
+                        <input id = "username" type = "text" placeholder = "Digite seu nome de usuário" autofocus required>
+                        <input id = "password" type = "password" placeholder = "Digite sua senha" required>
                         <input id = "form_submit" type = "submit" value = "Entrar">
                     </form>
 
