--- a/calendar.html
+++ b/calendar.html
@@ -31,30 +31,41 @@
         </header>
 
         <main>
-            <div class = "calendario">
-                <div class = "calendario-cabecalho">
-                    <p class = "cabecalho-data"></p>
+            <section>
+                <div class = "calendario">
+                    <div class = "calendario-cabecalho">
+                        <p class = "cabecalho-data"></p>
 
-                    <div class = "cabecalho-icones">
-                        <ion-icon id = "prev" name = "chevron-back-outline"> </ion-icon>
-                        <ion-icon id = "next" name = "chevron-forward-outline"> </ion-icon>
+                        <div class = "cabecalho-icones">
+                            <ion-icon id = "prev" name = "chevron-back-outline"> </ion-icon>
+                            <ion-icon id = "next" name = "chevron-forward-outline"> </ion-icon>
+                        </div>
+                    </div>
+
+                    <div class = "calendario-conteudo">
+                        <ul class = "conteudo-semanas">
+                            <li> Dom </li>
+                            <li> Seg </li>
+                            <li> Ter </li>
+                            <li> Qua </li>
+                            <li> Qui </li>
+                            <li> Sex </li>
+                            <li> Sáb </li>
+                        </ul>
+
+                        <ul class = "conteudo-dias"></ul>
                     </div>
                 </div>
 
-                <div class = "calendario-conteudo">
-                    <ul class = "conteudo-semanas">
-                        <li> Dom </li>
-                        <li> Seg </li>
-                        <li> Ter </li>
-                        <li> Qua </li>
-                        <li> Qui </li>
-                        <li> Sex </li>
-                        <li> Sáb </li>
-                    </ul>
-
-                    <ul class = "conteudo-dias"></ul>
+                <div class = "atividades">
+                    <div>
+                        <h2> Atividades Pendentes </h2>
+                    </div>
+                    <div>
+                        <input type = "button" value = "Consultar">
+                    </div>
                 </div>
-            </div>
+            </section>
         </main>
 
         <script type = "module" src = "https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"> </script>
