--- a/calendar.html
+++ b/calendar.html
@@ -61,6 +61,9 @@
                     <div>
                         <h2> Atividades Pendentes </h2>
                     </div>
+                    <div class = "atividades-totais">
+                    .
+                    </div>
                     <div>
                         <input type = "button" value = "Consultar">
                     </div>
