mudanças na página de quem somos

--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,15 @@
 
                     <div class = "sobre-conteudo">
                         <h3> E-Chronos </h3>
-                        <p> ahsjahsajhsjahsjajshjahsjhajshjahsjhajshja Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur incidunt laudantium porro recusandae assumenda veritatis veniam, sit repellat facilis consequuntur sequi delectus nisi maiores nihil. Quas unde ex soluta dicta? </p>
+                        <p> Somos um grupo que, através das experiências
+                            que tivemosno ambiente escolar, conseguimos
+                            ter a conecpção de um site capaz de organizar
+                            e planejar todas as atividades/trabalhos e
+                            conteúdos passados de profesores para alunos,
+                            e assim criamos a e-chronos, uma ferramenta
+                            intuitiva para organização de cronogramas
+                            escolares.
+                        </p>
                         <a class = "conteudo-mais" href = "#"> Ler mais </a>
                     </div>
                 </section>
