--- a/about-us.html
+++ b/about-us.html
@@ -4,12 +4,10 @@
         <meta charset = "utf-8">
         <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <meta name = "description" content = "E-Chronos - Site acadêmico">
         <title> E-Chronos | Quem somos </title>
         <link rel = "icon" href = "img/favicon.ico">
         <link rel = "stylesheet" href = "css/about-us.css">
         <link rel = "stylesheet" href = "css/responsive-menu.css">
-        <script src = "js/about-us.js" defer> </script>
         <script src = "js/responsive-menu.js" defer> </script>
     </head>
     <body onresize = "adequarMenu()">
@@ -35,7 +33,7 @@
             <div class = "container">
                 <div class = "titulo">
                     <h2> Quem somos </h2>
-                    <p> Um novo olhar sob o planejamento e organização no colégio </p>
+                    <p> Um novo olhar sobre o planejamento e organização no colégio </p>
                 </div>
 
                 <section class = "sobre">
@@ -45,16 +43,15 @@
 
                     <div class = "sobre-conteudo">
                         <h3> E-Chronos </h3>
-                        <p> Somos um grupo que, através das experiências
-                            que tivemosno ambiente escolar, conseguimos
-                            ter a conecpção de um site capaz de organizar
-                            e planejar todas as atividades/trabalhos e
-                            conteúdos passados de profesores para alunos,
-                            e assim criamos a e-chronos, uma ferramenta
-                            intuitiva para organização de cronogramas
-                            escolares.
+                        <p> Somos um grupo que através das experiências
+                            obtidas no ambiente escolar, conseguimos
+                            ter a concepção de um site capaz de organizar
+                            e planejar todas as atividades, trabalhos e
+                            conteúdos passados de professores para alunos,
+                            e assim criamos a <strong>E-Chronos</strong>,
+                            uma ferramenta intuitiva para organização de
+                            cronogramas escolares.
                         </p>
-                        <a class = "conteudo-mais" href = "#"> Ler mais </a>
                     </div>
                 </section>
             </div>
