--- a/account.html
+++ b/account.html
@@ -40,7 +40,7 @@
                     <form action = "#">
                         <div class = "formulario-titulo">
                             <div class = "titulo-texto">
-                                <h2> Inscreva-se agora! </h2>
+                                <h2> Cadastre-se agora! </h2>
                             </div>
                             <div class = "titulo-botao">
                                 <button> <a href = "https://andrey-alm.github.io/e-chronos-ofc/index.html"> Entrar </a> </button>
@@ -76,13 +76,13 @@
 
                             <div class = "acesso-conteudo">
                                 <div class = "conteudo-box">
-                                    <input type = "radio" id = "professor">
-                                    <label for = "professor"> Professor </label>
+                                    <input type = "radio" id = "aluno" name = "user-type" checked>
+                                    <label for = "aluno"> Aluno </label>
                                 </div>
 
                                 <div class = "conteudo-box">
-                                    <input type = "radio" id = "aluno">
-                                    <label for = "aluno"> Aluno </label>
+                                    <input type = "radio" id = "professor" name = "user-type">
+                                    <label for = "professor"> Docente </label>
                                 </div>
                             </div>
                         </div>
