--- a/calendar.html
+++ b/calendar.html
@@ -62,7 +62,9 @@
                         <h2> Atividades Pendentes </h2>
                     </div>
                     <div class = "atividades-totais">
-                    .
+                        <div class = "atividade">
+                            Você não possui atividades pendentes &#128513;
+                        </div>
                     </div>
                     <div>
                         <input type = "button" value = "Consultar">
