--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                         <h3> Seja bem-vindo (a) </h3>
                     </div>
 
+                    <div class = "login-msg">
+                        <p> </p>
+                    </div>
+
                     <form class = "login-formulario">
                         <div class = "formulario-entrada">
                             <ion-icon name = "person-outline"> </ion-icon>
@@ -49,7 +53,7 @@
                             <input id = "password" type = "password" placeholder = "Digite sua senha" autocomplete = "current-password" required>
                         </div>
                         <div class = "formulario-envio">
-                            <input id = "form_submit" type = "submit" value = "Acessar">
+                            <button id = "form_submit"> Acessar </button>
                         </div>
                     </form>
 
