--- a/account.html
+++ b/account.html
@@ -49,23 +49,23 @@
 
                         <div class = "formulario-entrada">
                             <div class = "entrada-box">
-                                <label for = "username" class = "requi"> Nome completo </label>
-                                <input id = "username" type = "text" placeholder = "Digite seu nome completo" autofocus required>
+                                <label for = "nome-usuario" class = "requi"> Nome completo </label>
+                                <input id = "nome-usuario" type = "text" placeholder = "Digite seu nome completo" autofocus required>
                             </div>
 
                             <div class = "entrada-box">
-                                <label for = "user-ra" class = "requi"> Número de matrícula </label>
-                                <input id = "user-ra" type = "number" placeholder = "Digite seu nº de matrícula" required>
+                                <label for = "numero-matri" class = "requi"> Número de matrícula </label>
+                                <input id = "numero-matri" type = "number" placeholder = "Digite seu nº de matrícula" required>
                             </div>
 
                             <div class = "entrada-box">
-                                <label for = "password" class = "requi"> Senha </label>
-                                <input id = "password" type = "password" placeholder = "Digite sua senha" required>
+                                <label for = "senha-usuario" class = "requi"> Senha </label>
+                                <input id = "senha-usuario" type = "password" placeholder = "Digite sua senha" required>
                             </div>
 
                             <div class = "entrada-box">
-                                <label for = "confirm-password" class = "requi"> Confirme sua senha </label>
-                                <input id = "confirm-password" type = "password" placeholder = "Digite a senha novamente" required>
+                                <label for = "confirmar-senha" class = "requi"> Confirme sua senha </label>
+                                <input id = "confirmar-senha" type = "password" placeholder = "Digite a senha novamente" required>
                             </div>
                         </div>
 
@@ -76,19 +76,19 @@
 
                             <div class = "acesso-conteudo">
                                 <div class = "conteudo-box">
-                                    <input type = "radio" id = "aluno" name = "user-type" checked>
+                                    <input type = "radio" id = "aluno" name = "tipo-usuario" checked>
                                     <label for = "aluno"> Aluno </label>
                                 </div>
 
                                 <div class = "conteudo-box">
-                                    <input type = "radio" id = "professor" name = "user-type">
+                                    <input type = "radio" id = "professor" name = "tipo-usuario">
                                     <label for = "professor"> Docente </label>
                                 </div>
                             </div>
                         </div>
 
                         <div class = "formulario-envio">
-                            <input id = "cadastro" type = "submit" value = "Cadastrar">
+                            <button id = "cadastro"> Cadastrar </button>
                         </div>
                     </form>
                 </section>
